# 2d-irregular-packing

./: .gitignore  bottom_left_fill.py  input_utls.py  nfp_assistant.py  pyproject.toml  settings.py  test_dxf_packing.py  test_packing.py
dxf_for_test/: EVA190_art-465_1_driver_no_footrest_op2.dxf  EVA190_art-465_1_passenger_op2.dxf  EVA190_art-465_23_cargo_bed_mat_czesc1.dxf  EVA190_art-465_23_cargo_bed_mat_czesc2.dxf  EVA190_art-465_6_driver_footrest_op2.dxf
history/: nfp.csv
texts/: A heuristic for solving the irregular strip packing problem with quantum optimization.txt  Irregular Packing Problems- Heuristic Algorithms and Evaluation of NFP generators.txt  Nesting of two-dimensional irregular parts- an integrated approach.txt  the grail of solving the nesting problem.txt
util/: polygon_util.py
